# teaug

./: .env.example  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt
data/base/: sentipers_train.csv
data/output/: augmented_sentipers_train.csv  class_swap_results.jsonl
lab/: augmentation_overview.ipynb  class_swap_demo.py  dataset_stats.py  shiraz_sentipers.ipynb
src/langaug/: __init__.py  config.py
src/langaug/augmentors/: __init__.py  base.py
src/langaug/data/prompts/: class_swap.jinja2
src/langaug/datasets/: __init__.py  base.py
src/langaug/datasets/loaders/: __init__.py  huggingface.py
src/langaug/pipelines/: __init__.py  base.py
src/langaug/samplers/: __init__.py  base.py
src/langaug/services/: __init__.py  base.py  openai.py
src/langaug/transforms/: __init__.py  base.py  class_swap.py
src/langaug/utils/: __init__.py  prompts.py
