[project]
name = "teaug"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.11"
dependencies = [
	"langchain",
	"langchain-openai",
	"langfuse",
	"pydantic",
	"pydantic-settings",
	"datasets",
	"jinja2",
	"python-dotenv",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5.1",
]
