[project]
name = "langaug"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.11"
dependencies = [
	"langchain",
	"langchain-openai",
	"langfuse",
	"pydantic",
	"pydantic-settings",
	"datasets",
	"jinja2",
	"python-dotenv",
	"tqdm>=4.67.1",
	"loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5.1",
]
